--- a/src/public/nosotros.html
+++ b/src/public/nosotros.html
@@ -46,6 +46,9 @@
 
 </head>
 <body class="bg-[#0E0E0E]">
+  <div id="larcad-chatbot"></div>
+<link rel="stylesheet" href="chatbot.css">
+<script src="chatbot.js"></script>
     <div id="loader" class="fixed inset-0 z-50 flex items-center justify-center bg-white">
     <img src="/img/cargando.gif" alt="Cargando..." class="w-32 h-32 animate-pulse" />
   </div>
