--- a/src/public/index.html
+++ b/src/public/index.html
@@ -274,8 +274,8 @@ En los últimos años, los laboratorios de cómputo de alto desempeño (HPC) han
             </div>
         </div>
     </div>
-    <!-- Servicios ->
-	<!-- Servicios -->
+    <!-- Servicios -->
+
 <div class="flex flex-col items-center mb-8" data-aos="fade-down">
     <h2 class="text-center text-orange-500 text-lg font-semibold uppercase">Servicios</h2>
     <div class="w-16 md:w-24 h-1 bg-[#00A6FF] mt-2 rounded"></div>
@@ -293,6 +293,7 @@ En los últimos años, los laboratorios de cómputo de alto desempeño (HPC) han
             </p>
         </div>
     </div>
+
 
     <!-- Tarjeta Respaldo administrado -->
     <div class="flex flex-col h-72 rounded-xl overflow-hidden shadow-lg group hover:scale-105 transition-transform duration-300" data-aos="zoom-in" data-aos-delay="100">
@@ -411,6 +412,8 @@ En los últimos años, los laboratorios de cómputo de alto desempeño (HPC) han
             </div>
         </form>
     </div>
+    <div id="mi-markdown"></div>
+
 
 </section>
 <footer class="bg-[#022d5a] text-white py-10">
